@@ -322,6 +322,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
     if(err != null) return internalCallback(err, null, server);
     server.master = reply.documents[0].ismaster == 1 ? true : false;
     server.connectionPool.setMaxBsonSize(reply.documents[0].maxBsonObjectSize);
+    server.connectionPool.setMaxMessageSizeBytes(reply.documents[0].maxMessageSizeBytes);
     // Set server as connected
     server.connected = true;
     // Save document returned so we can query it
